fix: author photo is too big

--- a/djraft/static/sass/project.scss
+++ b/djraft/static/sass/project.scss
@@ -862,6 +862,8 @@ body {
         display: flex;
         .avatar {
           a > img {
+            width: 64px;
+            height: 64px;
             border-radius: 4px;
           }
         }
